css/data.less
@font-face
{
font-family: 'Oswald';
src: url(../fonts/Oswald-Regular.ttf);
}

@font-face
{
font-family: 'Oswald Light';
src: url(../fonts/Oswald-Light.ttf);
}

@font-face
{
font-family: 'Duru Sans';
src: url(../fonts/DuruSans-Regular.ttf);
}

@font-heading: 'Oswald', sans-serif;
@font-subheading: 'Oswald Light', sans-serif;
@font-body: 'Duru Sans', sans-serif;
@color-gray: #7f7f7f;
@color-blue: #0aa3df;
@color-green: #73be44;
@color-highlightedgray: #3e3e3e;
@color-preretrofit: #abd6d2;
@color-paleblue: #abd6e4;
@color-darkblue: #4ba1bf;

.noWebkitMargin {
  -webkit-margin-before: 0em;
  -webkit-margin-after: 0em;
}

/* GENERAL */

body {
  margin: 0px;
}

h1 {
  padding-top: 60px;
  padding-bottom: 30px;
  font-family: @font-heading;
  font-size: 80px; 
  color: @color-gray;
  .noWebkitMargin;
  text-align: center;
}

h2 {
  font-family: @font-subheading;
  color:@color-highlightedgray;
  .noWebkitMargin;
  padding-top: 75px;
}

h3 {
  position: absolute;
  font-family: @font-subheading;
  font-size: 30px;
  color: white;
  left: 80px;
}

#preText {
  font-size: 20px;
  color: @color-preretrofit;
}

#frame {
	position: absolute;
	height: 100%;
	width: 100px;
	left: 0px;
	top:0px;
	background-color:rgba(0,0,0,0.65);
}

#content {
	width: 100%;
	/*left: 120px;*/
	/*top: 40px;*/
	position: absolute;
  /*background-color:rgba(171,214,228,1);*/
}

.section {
  width: 100%;
  height: auto;
  padding: 0px 0px 40px 0px;
  /*text-align: center;*/
  min-height: 200px;
  position: relative;


  .icon {
    height: 200px;
    position: relative;
    float: left;
    display: inline-block;
    margin: 0px 60px 20px 40px;
  }
}

.odd {
  background-color: @color-paleblue;
}
.even {
  background-color: @color-darkblue;
}

.centered {
  display: block;
  position: relative;
  margin-right: auto;
  margin-left: auto;
}

#ball {
  text-align: right;
  color: @color-highlightedgray;
  padding-right: 5px;
  padding-bottom: 5px;
  background-color: @color-darkblue;
  font-family: @font-body;
  font-size: 14px;
}

/* ENERGY SECTION */

#stockChart {
  position: relative;
  overflow: hidden;
  height:400px;
  margin: 50px 100px 50px auto;
}

#activityContainer {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -53px;
  margin-left: -48px;
  text-align: center;
}

#activityText {
  display: block;
  font-family: @font-body;
  font-size: 16px;
  line-height: 40px;
  color: @color-highlightedgray;
}

#activityIndicator {
  -webkit-animation-duration: 1.25s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  -webkit-animation-name: spinnerAnim;
  -moz-animation-duration: 1.25s;
  -moz-animation-iteration-count: infinite;
  -moz-animation-timing-function: linear;
  -moz-animation-name: spinnerAnim;
}
@-webkit-keyframes spinnerAnim {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(-360deg); }
}

@-moz-keyframes spinnerAnim {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(-360deg); }
}


/* TEMPERATURE SECTION */

#temperatureSection {
  overflow: hidden;
  height: 700px;

  .icon {
    margin-top: 16px;
  }
}

#tempWrapper {
  display:none;
}

#rightHalf {
  height: 100%;
  /*width: 400px;*/
  width: auto;
  min-width: 200px;
  display: block;
  position: relative;
  overflow: hidden;
  margin-left: 40px;
  margin-right: 40px;

  h3 {
    position: relative;
    margin-left: 0px;
    left: 0;
    display: block;
    text-align: center;
    /*font-size: 24px;*/
  }
}

#tempChart {
  height:50%;
  width: 100%;
  /*margin: 150px 50px 100px 0px;*/
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
}

#explodedContainer {
  display: inline-block;
  position: relative;
  min-width: 300px;
  max-width: 900px;
  width: 40%;
  height:100%;
  float: left;
}

#referencePoint {
  margin-top: 50px;
  top: 50px;
  width: 100%;
  height: 100%;
  position: absolute;
}

.explodedView {
  width: 100%;
  position: absolute;
}
  #top.explodedView {
    /*top: 0px;*/
    top: 160px;
    left: 0px;
    /*z-index: 3;*/
  }
  #middle.explodedView {
    top: 160px;
    left: 0px;
    /*z-index: 2;*/
  }
  #bottom.explodedView {
    /*top: 350px;*/
    top: 160px;
    left: 0px;
    /*z-index: 1;*/
  }

#basementTemp {
  position: absolute;
  bottom: 125px;
  /*right: 270px;*/
  right: 54%;
}

#officeTemp {
  position: absolute;
  bottom: 390px;
  /*right: 200px;*/
  right: 40%;
}

#kitchenTemp {
  position: absolute;
  bottom: 350px;
  /*right: 120px;*/
  right: 22%;
}

#diningTemp {
  position: absolute;
  bottom: 310px;
  /*right: 190px;*/
  right: 38%;
}

#livingTemp {
  position: absolute;
  bottom: 290px;
  /*right: 270px;*/
  right: 54%;
}

#firstBathTemp {
  position: absolute;
  bottom: 365px;
  /*right: 260px;*/
  right: 52%;
}

#southBedroomTemp {
  position: absolute;
  top: 40px;
  /*right: 250px;*/
  right: 50%;
}

#northBedroomTemp {
  position: absolute;
  top: 80px;
  /*right: 180px;*/
  right: 36%;
}

#eastBedroomTemp {
  position: absolute;
  top: 105px;
  /*right: 285px;*/
  right: 57%;
}

#secondBathTemp {
  position: absolute;
  top: 110px;
  /*right: 210px;*/
  right: 42%;
}

#atticTemp {
  position: absolute;
  top: 15px;
  /*right: 160px;*/
  /*top: 4.6%;*/
  left: 52%;
  /*left: 260px;*/
}

.preRetro {
  position: relative;
  color: @color-paleblue;
  z-index: 4;
  font-family: @font-subheading;
  font-size: 16px;
}

.postRetro {
  position: relative;
  color: white;
  z-index: 4;
  font-family: @font-subheading;
  font-size: 24px;
}

